# arbitrary-precision

./: .clang-format  .gitignore  CMakeLists.txt  Integer.cpp  LICENSE.md  README.md  UnsignedInteger.cpp  main.cpp
examples/: CMakeLists.txt  calc_pi.cpp  speed_test.cpp  test.cpp
include/arbitrary_precision/: Float.h  Float.hpp  Integer.h  Number.hpp  ThreadPool.hpp  UnsignedInteger.h  arbitrary_precision.h
include/exact/: exact.h  exceptions.h  integer.h  non_negative_integer.h  positive_integer.h  rational.h  type_utils.h  unsigned_integer.h
src/: CMakeLists.txt  Float.cpp  Integer.cpp  UnsignedInteger.cpp  integer.cpp  non_negative_integer.cpp  positive_integer.cpp  rational.cpp  unsigned_integer.cpp
test/: catch.hpp  test_main.cpp  test_non_negative_and_normal_ints.cpp  test_positive_int.cpp  test_rational.cpp  tests.cpp
